finshed header and nav

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,52 @@
 // Navigation Styles here
+
+Header{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin:1.5rem 0rem 0rem;
+    height:10.0rem;
+    align-items:center;
+    border-bottom: .3rem dashed lightgrey;
+
+
+  h1{ 
+    justify-content: center;
+    width:25.0rem;
+    margin-left:20.0rem;
+    
+ 
+ } 
+
+  .nav-box{
+      display:flex;
+      width:40.0rem;
+      margin-right:21.0rem;
+
+  }
+  nav{
+      display:flex;
+      justify-content: space-between;
+      width:50.0rem;
+      word-spacing:4rem;
+      font-size: 2.0rem;
+ } 
+
+ a{
+    color:black;
+    font-weight:bold;
+    text-decoration: none;
+ }
+
+ a:hover{
+     color:black;
+
+ }
+
+}
+
+.school-bus{
+    display:flex;
+    justify-content: center;   
+
+}
